--- a/css/Kasper.css
+++ b/css/Kasper.css
@@ -973,3 +973,85 @@ header nav .form i {
 }
 
 /* End Pricing */
+/*  Start Sub  */
+.sub {
+  padding-top: var(--section-padding);
+  padding-bottom: var(--section-padding);
+  background-image: url(../images/subscribe.jpg);
+  background-size: cover;
+  position: relative;
+  color: white;
+}
+
+.sub::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 50%);
+}
+
+.sub .container {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 991px) {
+  .sub .container {
+    flex-direction: column;
+  }
+}
+
+.sub form {
+  display: flex;
+  position: relative;
+  width: 500px;
+  max-width: 100%;
+}
+.sub form i {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  left: 25px;
+}
+.sub form input[type="email"] {
+  background-color: transparent;
+  border: 1px solid white;
+  border-right: none;
+  padding: 20px 20px 20px 60px;
+  caret-color: var(--main-color);
+  width: calc(100% - 130px);
+  outline: none;
+}
+.sub form input[type="submit"] {
+  width: 130px;
+  background-color: var(--main-color);
+  color: white;
+  border: 1px solid white;
+  border-left: none;
+  text-transform: uppercase;
+}
+
+.sub form input[type="email"]::placeholder {
+  color: white;
+}
+
+.sub p {
+  line-height: 1.5;
+  margin-left: 50px;
+}
+
+@media (max-width: 991px) {
+  .sub p {
+    margin: 30px 0 0;
+    text-align: center;
+  }
+}
+/* End Sub  */
